apps/ncsa-teststand-efd/templates/argocd-server-grpc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
    host: lsst-grpc-argocd-nts-efd.ncsa.illinois.edu
  tls:
  - hosts:
    - lsst-grpc-argocd-nts-efd.ncsa.illinois.edu
    secretName: tls-certs
